rust/g1/base/tests/owner/nonstatic-error.stderr
error: higher-ranked lifetime error
  --> tests/owner/nonstatic-error.rs:14:5
   |
14 |     Owner::try_from(Vec::new()).unwrap();
   |     ^^^^^^^^^^^^^^^
